--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>XivTech</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
